lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:35: error: zone is already defined as variable zone
  	var zone = getLandingZone()
            ^Lander:27: error: not found: value getLandingZone
var zone = getLandingZone()
           ^Lander:35: error: not found: value getLandingZone
  	var zone = getLandingZone()
                   ^Lander:33: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:40: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:44: error: not found: value setPousseedesiree
  		setPousseedesiree(4) 
                ^Lander:50: error: not found: value setPousseedesiree
setPousseedesiree(4)
^Lander:52: error: not found: value setPousseedesiree
else setPousseedesiree(0)
     ^Lander:37: error: method position is defined twice
  conflicting symbols both originated in file 'plm.runtime70.Lander'
  	def position():Int =
            ^Lander:56: error: not found: value setPousseedesire
  		setPousseedesire(4)
                ^